uppercase e in list